--- a/iBXData/iBXData.xcodeproj/xcshareddata/xcschemes/iBXData.xcscheme
+++ b/iBXData/iBXData.xcodeproj/xcshareddata/xcschemes/iBXData.xcscheme
@@ -33,7 +33,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "3453FA4F1786A9CD0051C096"
-               BuildableName = "iBXDataTests.octest"
+               BuildableName = "iBXDataTests.xctest"
                BlueprintName = "iBXDataTests"
                ReferencedContainer = "container:iBXData.xcodeproj">
             </BuildableReference>
